--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "the-little-prince's-fireworks",
+  "homepage": "https://dengfangdan.github.io/-",
   "private": true,
   "version": "0.0.0",
   "type": "module",
